[gd_scene load_steps=7 format=3 uid="uid://b5rdpdm748scj"]

[ext_resource type="Script" path="res://enemies/alien.gd" id="1_773d6"]
[ext_resource type="Texture2D" uid="uid://bxdm7unavdbqa" path="res://assets/Alien.png" id="2_tmha4"]
[ext_resource type="Script" path="res://common/components/HealthComponent.gd" id="3_rkv71"]
[ext_resource type="Script" path="res://enemies/melee_attack.gd" id="4_ai4i4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w8yv8"]
radius = 4.0
height = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gynkl"]
radius = 18.0

[node name="Alien" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_773d6")
speed = 150

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
texture = ExtResource("2_tmha4")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_rkv71")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("CapsuleShape2D_w8yv8")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="AttackRange" type="Area2D" parent="."]
script = ExtResource("4_ai4i4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_gynkl")

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="body_entered" from="AttackRange" to="AttackRange" method="_on_body_entered"]
[connection signal="body_exited" from="AttackRange" to="AttackRange" method="_on_body_exited"]
